--- a/index.html
+++ b/index.html
@@ -4678,6 +4678,8 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
     .modal-overlay {
       position: fixed;
       inset: 0;
+      width: 100%;
+      height: 100%;
       background: rgba(0, 0, 0, 0.6);
       display: flex;
       align-items: center;
@@ -4699,7 +4701,8 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
     .modal-card {
       display: flex;
       flex-direction: column;
-      max-height: calc(100vh - 3rem);
+      max-height: 80vh;
+      overflow: hidden;
     }
 
     .modal-card--wide {
@@ -4711,23 +4714,30 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
     }
 
     .modal-scroll-content {
+      display: flex;
+      flex-direction: column;
+      gap: var(--space-3);
       flex: 1 1 auto;
       min-height: 0;
-      display: grid;
-      gap: var(--space-3);
-      height: calc(100vh - 180px);
+    }
+
+    .modal-scroll-content > .modal__close {
+      align-self: flex-end;
+    }
+
+    .modal-card .card-body {
+      flex: 1 1 auto;
+      min-height: 0;
       overflow-y: auto;
       -webkit-overflow-scrolling: touch;
+      overscroll-behavior: contain;
+      scroll-behavior: smooth;
       scrollbar-width: none;
       -ms-overflow-style: none;
     }
 
-    .modal-scroll-content::-webkit-scrollbar {
+    .modal-card .card-body::-webkit-scrollbar {
       display: none;
-    }
-
-    .modal-scroll-content > .modal__close {
-      justify-self: flex-end;
     }
 
     .templates-card {
@@ -6498,6 +6508,7 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
       z-index: 2;
       border-bottom-left-radius: 14px;
       border-bottom-right-radius: 14px;
+      flex-shrink: 0;
     }
 
     #addTaskOverlay[data-quick-task-mode="true"] .task-form-group__label,
