--- a/index.html
+++ b/index.html
@@ -4730,6 +4730,62 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
       justify-self: flex-end;
     }
 
+    #addTaskOverlay {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: stretch;
+      justify-content: center;
+      padding: clamp(0.75rem, 3vw, 1.35rem);
+      background: rgba(4, 10, 18, 0.88);
+      isolation: isolate;
+      z-index: 2200;
+    }
+
+    #addTaskOverlay .modal-card {
+      display: flex;
+      flex-direction: column;
+      width: min(720px, 100%);
+      max-height: none;
+      flex: 1 1 auto;
+      overflow: hidden;
+      margin: 0 auto;
+      box-shadow: 0 24px 64px rgba(0, 0, 0, 0.5);
+    }
+
+    #addTaskOverlay .modal-scroll-content {
+      display: flex;
+      flex-direction: column;
+      gap: var(--space-3);
+      flex: 1 1 auto;
+      min-height: 0;
+      height: auto;
+      overflow: hidden;
+    }
+
+    #addTaskOverlay .modal-scroll-content > .modal__close {
+      align-self: flex-end;
+    }
+
+    #addTaskOverlay .card-body {
+      flex: 1 1 auto;
+      min-height: 0;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
+      overscroll-behavior: contain;
+      scroll-behavior: smooth;
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+    }
+
+    #addTaskOverlay .card-body::-webkit-scrollbar {
+      display: none;
+    }
+
+    #addTaskOverlay .card-sticky-actions {
+      flex-shrink: 0;
+    }
+
     .templates-card {
       max-width: min(520px, 92vw);
       background: rgba(14, 20, 28, 0.94);
