Fix schedule card hidden inside add task overlay

--- a/index.html
+++ b/index.html
@@ -10056,8 +10056,10 @@ document.querySelectorAll(".neuro-checklist__item-label").forEach(label=>{
           <button type="button" class="btn btn-ghost" onclick="reset()">Reset</button>
         </div>
       </div>
+      </div>
     </div>
   </div>
+</div>
 
   <div id="focusLaunchBackdrop" class="focus-sheet__backdrop" hidden></div>
   <section
