--- a/index.html
+++ b/index.html
@@ -4707,6 +4707,7 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
 
     .modal-card--wide {
       max-width: 720px;
+      max-height: 90vh;
     }
     .wizard-content h3,
     .modal-card h3 {
@@ -4719,6 +4720,22 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
       gap: var(--space-3);
       flex: 1 1 auto;
       min-height: 0;
+    }
+
+    .modal-card__header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: var(--space-2);
+      margin-bottom: var(--space-1);
+    }
+
+    .modal-card__header h3 {
+      margin: 0;
+    }
+
+    .modal-scroll-content--task-builder {
+      gap: var(--space-2);
     }
 
     .modal-scroll-content > .modal__close {
@@ -6511,11 +6528,20 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
       flex-shrink: 0;
     }
 
+    #addTaskOverlay .card-sticky-actions {
+      justify-content: flex-end;
+      gap: var(--space-2);
+    }
+
+    #addTaskOverlay .card-sticky-actions__primary {
+      flex-wrap: nowrap;
+      justify-content: flex-end;
+    }
+
     #addTaskOverlay[data-quick-task-mode="true"] .task-form-group__label,
     #addTaskOverlay[data-quick-task-mode="true"] label[for="taskCategory"],
     #addTaskOverlay[data-quick-task-mode="true"] .task-inline-actions,
-    #addTaskOverlay[data-quick-task-mode="true"] #taskDetails,
-    #addTaskOverlay[data-quick-task-mode="true"] .card-sticky-actions__secondary {
+    #addTaskOverlay[data-quick-task-mode="true"] #taskDetails {
       display: none;
     }
 
@@ -9950,42 +9976,44 @@ document.querySelectorAll(".neuro-checklist__item-label").forEach(label=>{
 
   <div id="addTaskOverlay" class="modal-overlay hidden" aria-hidden="true">
     <div class="modal-card modal-card--wide" role="dialog" aria-modal="true" aria-labelledby="addTaskTitle">
-      <div class="modal-scroll-content">
-        <button id="addTaskClose" class="modal__close" type="button" aria-label="Close task builder">✕</button>
-        <h3 id="addTaskTitle">Add task</h3>
+      <div class="modal-scroll-content modal-scroll-content--task-builder">
+        <header class="modal-card__header">
+          <h3 id="addTaskTitle">Add task</h3>
+          <button id="addTaskClose" class="modal__close" type="button" aria-label="Close task builder">✕</button>
+        </header>
         <div class="card-body" id="addTaskCardBody" aria-hidden="false">
           <div class="task-form-group">
-          <span class="task-form-group__label">New task</span>
-          <p id="quickTaskTemplateHint" class="quick-task-hint hidden">Quick task mode: name it and tap Add.</p>
-          <label for="name">Task name
-            <input id="name" type="text" placeholder="3/14 – J.M. – Complex Care Follow-Up (Resident)" />
-          </label>
-          <label><input id="humorizeName" type="checkbox"> Playful name</label>
-          <label for="taskCategory">Category
-            <select id="taskCategory">
-              <option value="General" selected>General</option>
-              <option value="Admin">Admin</option>
-              <option value="Chart">Chart</option>
-              <option value="Inbox">Inbox</option>
-              <option value="Calls">Calls</option>
-              <option value="Teaching">Teaching</option>
-              <option value="Personal">Personal</option>
-              <option value="Quick Task">Quick Task</option>
-            </select>
-          </label>
-          <div class="task-inline-actions" aria-label="Task helpers">
-            <button type="button" class="link-button" id="btn-use-template">Use template</button>
-            <button type="button" class="link-button" id="btn-save-template">Add as template</button>
-            <button
-              type="button"
-              class="link-button"
-              id="expandTaskDetailsButton"
-              aria-controls="taskDetails"
-              aria-expanded="false"
-            >
-              Show details
-            </button>
-          </div>
+            <span class="task-form-group__label">New task</span>
+            <p id="quickTaskTemplateHint" class="quick-task-hint hidden">Quick task mode: name it and tap Add.</p>
+            <label for="name">Task name
+              <input id="name" type="text" placeholder="3/14 – J.M. – Complex Care Follow-Up (Resident)" />
+            </label>
+            <label><input id="humorizeName" type="checkbox"> Playful name</label>
+            <label for="taskCategory">Category
+              <select id="taskCategory">
+                <option value="General" selected>General</option>
+                <option value="Admin">Admin</option>
+                <option value="Chart">Chart</option>
+                <option value="Inbox">Inbox</option>
+                <option value="Calls">Calls</option>
+                <option value="Teaching">Teaching</option>
+                <option value="Personal">Personal</option>
+                <option value="Quick Task">Quick Task</option>
+              </select>
+            </label>
+            <div class="task-inline-actions" aria-label="Task helpers">
+              <button type="button" class="link-button" id="btn-use-template">Use template</button>
+              <button type="button" class="link-button" id="btn-save-template">Add as template</button>
+              <button
+                type="button"
+                class="link-button"
+                id="expandTaskDetailsButton"
+                aria-controls="taskDetails"
+                aria-expanded="false"
+              >
+                Show details
+              </button>
+            </div>
           <div id="taskDetails" class="task-details-panel" data-collapsed="true">
             <div id="chartFields" class="chart-fields is-hidden" aria-hidden="true">
               <label for="authorType">Chart Author
@@ -10050,10 +10078,6 @@ document.querySelectorAll(".neuro-checklist__item-label").forEach(label=>{
           <button id="addTaskBtn" class="btn btn-primary" type="button" onclick="addTask()">Add Task</button>
           <button id="saveUpdateBtn" class="btn btn-primary hidden" type="button" onclick="saveTaskUpdate()">Save Update</button>
           <button id="cancelEditBtn" class="btn btn-ghost hidden" type="button" onclick="cancelEdit()">Cancel</button>
-        </div>
-        <div class="card-sticky-actions__secondary">
-          <button type="button" class="btn btn-secondary" onclick="startFiveMinuteSprint()" id="startBtn" disabled>Start 5-min</button>
-          <button type="button" class="btn btn-ghost" onclick="reset()">Reset</button>
         </div>
       </div>
       </div>
