Fix template persistence hydration and tests

--- a/index.html
+++ b/index.html
@@ -10776,6 +10776,7 @@ document.querySelectorAll(".neuro-checklist__item-label").forEach(label=>{
   const LEGACY_ADD_TASK_CARD_STATE_KEY = "addTaskCardState";
   const TEMPLATE_STORAGE_KEY = "tasker5000.templates";
   const LEGACY_TEMPLATE_STORAGE_KEY = "templates";
+  let templates = [];
   const ALL_TASKS_CARD_STATE_KEY = "ui.allTasks.collapsed";
   const COLLAPSIBLE_MODULE_IDS = [];
   const ROUTINE_STATE_KEY = "ui.routines.metadata";
@@ -16248,7 +16249,6 @@ document.querySelectorAll(".neuro-checklist__item-label").forEach(label=>{
 
   let tasks = [];
   let isHydratingTasks = true;
-  let templates = [];
   function normalizeStoredTemplate(template) {
     if (!template || typeof template !== "object") {
       return null;
@@ -16318,14 +16318,20 @@ document.querySelectorAll(".neuro-checklist__item-label").forEach(label=>{
 
   function persistTemplates() {
     if (typeof localStorage === "undefined") {
+      console.info("[templates] Skipping persist: localStorage unavailable.");
       return;
     }
     const payload = templates.map(normalizeStoredTemplate).filter(Boolean);
-    templates = payload.map(template => ({ ...template }));
+    templates.length = 0;
+    payload.forEach(template => {
+      templates.push({ ...template });
+    });
     try {
       const serialized = JSON.stringify(payload);
       localStorage.setItem(TEMPLATE_STORAGE_KEY, serialized);
       localStorage.setItem(LEGACY_TEMPLATE_STORAGE_KEY, serialized);
+      const count = payload.length;
+      console.info(`[templates] Persisted ${count} template${count === 1 ? "" : "s"} to storage.`);
     } catch (error) {
       console.warn("Unable to persist templates.", error);
     }
@@ -16333,12 +16339,19 @@ document.querySelectorAll(".neuro-checklist__item-label").forEach(label=>{
 
   function hydrateTemplatesFromStorage() {
     const { templates: storedTemplates, migrated } = readTemplatesFromStorage();
-    if (Array.isArray(storedTemplates)) {
-      templates = storedTemplates;
-      if (migrated) {
-        persistTemplates();
-      }
+    templates.length = 0;
+    if (Array.isArray(storedTemplates) && storedTemplates.length) {
+      storedTemplates.forEach(template => {
+        templates.push({ ...template });
+      });
     }
+    if (migrated && templates.length) {
+      console.info("[templates] Migrated legacy templates to consolidated storage key.");
+      persistTemplates();
+    }
+    const count = templates.length;
+    console.info(`[templates] Hydrated ${count} template${count === 1 ? "" : "s"} from storage.`);
+    renderTemplates();
   }
   let focusQueue = [];
   let editingTaskId = null;
@@ -22770,6 +22783,7 @@ host.appendChild(row);
   function openTemplatesOverlay(trigger = null) {
     const overlay = $("templatesOverlay");
     if (!overlay) return;
+    renderTemplates();
     lastTemplatesOpener = trigger || document.activeElement;
     overlay.classList.remove("hidden");
     overlay.setAttribute("aria-hidden", "false");
@@ -24590,6 +24604,7 @@ function wireInsights() {
   }, duration);
     }
     const hydrationOutcome = hydrateTasksFromStorage();
+    hydrateTemplatesFromStorage();
     restoreBriefModePreference();
     setupMomentumZones();
     setupNextBestObserver();
@@ -24650,7 +24665,6 @@ function wireInsights() {
     initializeGanttSnapshot();
     initializeWorstDayMode();
     initializeTaskBackupControls();
-    hydrateTemplatesFromStorage();
     registerCategoryFilterControl();
     registerTaskSortControl();
     setupStartRewardObserver();
