Improve energy sheet placement and closing

--- a/index.html
+++ b/index.html
@@ -622,9 +622,12 @@
 
     .energy-sheet {
       position: fixed;
-      inset: auto 50% 5%;
-      transform: translateX(50%);
+      top: var(--energy-sheet-top, 50%);
+      left: var(--energy-sheet-left, 50%);
+      transform: translate(-50%, calc(-50% + 24px));
       width: min(420px, 90vw);
+      max-height: calc(100vh - 32px);
+      overflow: auto;
       background: rgba(15, 22, 30, 0.96);
       border: 1px solid rgba(120, 164, 193, 0.35);
       border-radius: 18px;
@@ -639,7 +642,7 @@
     .energy-sheet.is-open {
       opacity: 1;
       pointer-events: auto;
-      transform: translateX(50%) translateY(-12px);
+      transform: translate(-50%, -50%);
     }
 
     .energy-sheet__header {
@@ -18810,10 +18813,19 @@ host.appendChild(row);
     };
 
     if (slider) {
-      slider.addEventListener("input", event => {
-        const raw = Number(event.target.value || slider.value || 3);
+      const applySliderValue = event => {
+        const raw = Number(event?.target?.value || slider.value || 3);
         const resolved = alignEnergySliders(raw, "sheet");
         refreshSheet(resolved);
+        return resolved;
+      };
+
+      slider.addEventListener("input", applySliderValue);
+      slider.addEventListener("change", event => {
+        applySliderValue(event);
+        window.requestAnimationFrame(() => {
+          closeEnergySheet();
+        });
       });
     }
 
@@ -18831,6 +18843,47 @@ host.appendChild(row);
     return sheet;
   }
 
+  function positionEnergySheet(sheet, anchor) {
+    if (!(sheet instanceof HTMLElement)) return;
+
+    const viewportWidth = window.innerWidth || document.documentElement?.clientWidth || 0;
+    const viewportHeight = window.innerHeight || document.documentElement?.clientHeight || 0;
+    const sheetRect = sheet.getBoundingClientRect();
+    const sheetWidth = sheetRect.width || sheet.offsetWidth || 0;
+    const sheetHeight = sheetRect.height || sheet.offsetHeight || 0;
+    const margin = 16;
+
+    const anchorRect = anchor instanceof HTMLElement ? anchor.getBoundingClientRect() : null;
+    let centerX = anchorRect ? anchorRect.left + anchorRect.width / 2 : viewportWidth / 2;
+    let centerY = anchorRect ? anchorRect.top + anchorRect.height / 2 : viewportHeight / 2;
+
+    const halfWidth = sheetWidth / 2;
+    const halfHeight = sheetHeight / 2;
+
+    if (viewportWidth > 0 && halfWidth > 0) {
+      const minCenterX = margin + halfWidth;
+      const maxCenterX = viewportWidth - margin - halfWidth;
+      if (maxCenterX >= minCenterX) {
+        centerX = Math.min(Math.max(centerX, minCenterX), maxCenterX);
+      } else {
+        centerX = viewportWidth / 2;
+      }
+    }
+
+    if (viewportHeight > 0 && halfHeight > 0) {
+      const minCenterY = margin + halfHeight;
+      const maxCenterY = viewportHeight - margin - halfHeight;
+      if (maxCenterY >= minCenterY) {
+        centerY = Math.min(Math.max(centerY, minCenterY), maxCenterY);
+      } else {
+        centerY = viewportHeight / 2;
+      }
+    }
+
+    sheet.style.setProperty("--energy-sheet-left", `${Math.round(centerX)}px`);
+    sheet.style.setProperty("--energy-sheet-top", `${Math.round(centerY)}px`);
+  }
+
   function syncCapacityOverlayState() {
     const body = document.body;
     if (!body) return;
@@ -18845,15 +18898,49 @@ host.appendChild(row);
 
   function openEnergySheet() {
     const card = document.getElementById("neuroChecklist");
-    if (!card) return;
+    if (!card) {
+      if (!openEnergySheet.__waitForCard) {
+        const handleCardReady = () => {
+          openEnergySheet.__waitForCard = null;
+          openEnergySheet();
+        };
+        openEnergySheet.__waitForCard = handleCardReady;
+        if (document.readyState === "loading") {
+          document.addEventListener("DOMContentLoaded", handleCardReady, { once: true });
+        } else {
+          window.requestAnimationFrame(handleCardReady);
+        }
+      }
+      return;
+    }
+    openEnergySheet.__waitForCard = null;
+
     const sheet = ensureEnergySheet();
-    if (!sheet) return;
+    if (!sheet) {
+      if (!openEnergySheet.__waitForSheet) {
+        const handleSheetReady = () => {
+          openEnergySheet.__waitForSheet = null;
+          openEnergySheet();
+        };
+        openEnergySheet.__waitForSheet = handleSheetReady;
+        if (document.readyState === "loading") {
+          document.addEventListener("DOMContentLoaded", handleSheetReady, { once: true });
+        } else {
+          window.requestAnimationFrame(handleSheetReady);
+        }
+      }
+      return;
+    }
+    openEnergySheet.__waitForSheet = null;
 
     const currentLevel = alignEnergySliders(getEnergyLevel(), "sheet");
     const refresh = typeof sheet.__refreshEnergySheet === "function" ? sheet.__refreshEnergySheet : null;
     if (refresh) {
       refresh(currentLevel);
     }
+
+    const anchor = card.querySelector("#capacityControlGrid");
+    positionEnergySheet(sheet, anchor instanceof HTMLElement ? anchor : card);
 
     sheet.classList.add("is-open");
     sheet.setAttribute("aria-hidden", "false");
